--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@icons/*": ["src/components/icons*"],
       "@layouts/*": ["src/layouts/*"],
       "@assets/*": ["src/assets/*"],
+      "@sections/*": ["src/components/sections/*"],
     }
   }
 }
